2009-10-23  Victor Wang  <victorw@chromium.org>

        Reviewed by Eric Seidel.

        Update the expected pixel result for test svg-as-background-6.html

        The old result is incorrect because of the wrong SVG masking offset calculation.
        Patch http://trac.webkit.org/changeset/49598 fixed the issue.
        The pixel result of this layout test needs to be updated.

        https://bugs.webkit.org/show_bug.cgi?id=30692

        * platform/mac/fast/backgrounds/svg-as-background-6-expected.checksum:
        * platform/mac/fast/backgrounds/svg-as-background-6-expected.png:

2009-10-23  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Sam Weinig.

        Fix caretRangeFromPoint()/elementFromPoint() returns wrong result 
        for a zoomed and scrolled page.
        https://bugs.webkit.org/show_bug.cgi?id=30689.

        The real cause is the wrong calculation of event.clientX/Y when
        page is zoomed and scolled.
        After Sam fixed the event.clientX/Y in r49551, the hit test point
        should be recalculated (revert r49490).

        * fast/dom/Document/CaretRangeFromPoint/caretRangeFromPoint-in-zoom-and-scroll-expected.txt: Added.
        * fast/dom/Document/CaretRangeFromPoint/caretRangeFromPoint-in-zoom-and-scroll.html: Added.
        * fast/dom/Document/CaretRangeFromPoint/hittest-relative-to-viewport-expected.txt:
        * fast/dom/Document/CaretRangeFromPoint/hittest-relative-to-viewport.html:
        * fast/dom/elementFromPoint-relative-to-viewport-expected.txt:
        * fast/dom/elementFromPoint-relative-to-viewport.html:

2009-10-23  Enrica Casucci  <enrica@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION: Copy is copying incorrect background-color
        <rdar://problem/7248529>
        https://bugs.webkit.org/show_bug.cgi?id=29697

        All the following tests have been re-baselined because
        the indent command now preserves the original markup.